# Nikon-MV1-To-EXIF

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/skills/build-windows-exe/: SKILL.md
docs/: RELEASE_v0.2.0.md
manual_test_data/: README.md  n00032.txt
scripts/: build_windows.ps1  generate_manual_test_data.py
src/nikon_mv1_to_exif/: __init__.py  __main__.py  app.py  exif_builder.py  matcher.py  metadata_dialog.py  metadata_reader.py  parser.py  processor.py  runtime_bootstrap.py  styles.py  xmp_builder.py
tests/: conftest.py  helpers.py  test_exif_builder.py  test_metadata_reader.py  test_parser.py  test_processor.py  test_xmp_builder.py
tests/fixtures/: sample_mv1.txt
