[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nikon-mv1-to-exif"
version = "1.0.0"
description = "Apply Nikon MV-1 metadata to scanned TIFF images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "Pillow>=10.0.0",
    "pyexiv2>=2.15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
nikon-mv1-to-exif = "nikon_mv1_to_exif.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
